#608 - fixing facets: fonts; alignments; colors; hover;          - fixing two column layout

--- a/ckanext-hdx_theme/ckanext/hdx_theme/public/dataset_search.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/public/dataset_search.css
@@ -17,11 +17,6 @@
 	  	border-bottom: 0px;
 	}
 	
-	.list-items.borderGreyBottom{
-        border-bottom: 1px solid #888888;
-    }
-	
-	
 	.list-items.section-border .align{
 		padding-top: 15px;
 	}
